fix layout collapse in Safari

--- a/src/client/components/application/index.scss
+++ b/src/client/components/application/index.scss
@@ -1,11 +1,5 @@
 @import "../../sass/_base-layout";
 
-.root {
-  @extend %l-flex-expand;
-
-  @extend %l-flex-container;
-}
-
 .main-viewport {
   @extend %l-flex-expand;
 
