--- a/src/client/components/condition-pane/index.scss
+++ b/src/client/components/condition-pane/index.scss
@@ -56,5 +56,6 @@
   font-size: 2rem;
   vertical-align: middle;
   border-bottom: 1px #999 solid;
+  border-radius: 0;
 }
 
