--- a/src/client/components/goods-pane/index.scss
+++ b/src/client/components/goods-pane/index.scss
@@ -8,9 +8,37 @@
 }
 
 .item {
-  display: inline-block;
-  width: 50%;
-  height: 50%;
+  //display: inline-block;
+  //width: 50%;
+  //height: 50%;
+  position: absolute;
+
+  // Safari needs this. Other way?
+  &:nth-child(1) {
+    top: 0;
+    right: 50%;
+    bottom: 50%;
+    left: 0;
+  }
+  &:nth-child(2) {
+    top: 0;
+    right: 0;
+    bottom: 50%;
+    left: 50%;
+  }
+  &:nth-child(3) {
+    top: 50%;
+    right: 50%;
+    bottom: 0;
+    left: 0;
+  }
+  &:nth-child(4) {
+    top: 50%;
+    right: 0;
+    bottom: 0;
+    left: 50%;
+  }
+
   text-align: center;
   overflow: hidden;
 }
